2010-06-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1556/cpukit
	* libfs/src/rfs/rtems-rfs-shell.c: Remove rtems_rfs_shell_cmd_t.

2010-06-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1566/filesystem
	* libnetworking/rtems/mkrootfs.c,  libnetworking/rtems/mkrootfs.h:
	Let rtems_rootfs_append_host_rec take an in_addr_t as first arg.
	* libnetworking/rtems/rtems_dhcp.c, libnetworking/nfs/bootp_subr.c:
	Reflect changes above.

2010-06-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/rfs/rtems-rfs-dir.c: Various 64bit compatibility fixes.
	Add PRIdoff_t.
	Remove stray "\"s.
	* libfs/src/rfs/rtems-rfs-link.c: Various 64bit compatibility fixes.

2010-06-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/rfs/rtems-rfs-file-system.h: Remove bogus typecast.
	* libfs/src/rfs/rtems-rfs-block.c, libfs/src/rfs/rtems-rfs-buffer.c,
	libnetworking/nfs/bootp_subr.c: Misc. 64bit-compatibility fixes.
	* posix/include/rtems/posix/pthread.h: Remove stray comment.
	Work-around doxygen comment bug.

2010-06-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/netinet/ip_fw.c, libnetworking/netinet/ip_input.c:
	Misc. 64bit-compatibility fixes.

2010-06-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libmisc/shell/print-ls.c, libmisc/shell/main_msdosfmt.c:
	Include <inttypes.h>.
	Misc. 64bit-compatibility fixes.

2010-06-14	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/rtems/mkrootfs.h,
	posix/include/rtems/posix/pthread.h,
	score/include/rtems/score/coresem.h,
	score/include/rtems/score/priority.h,
	score/include/rtems/score/threadq.h,
	score/include/rtems/score/timestamp.h: Move 'extern "C"'.
	* posix/include/rtems/posix/threadsup.h: Add extern "C".
	* libnetworking/netinet/in_pcb.c:
	Eliminate "ushort".
	* libfs/src/pipe/fifo.c, libfs/src/pipe/pipe.h:
	Eliminate "uint".

2010-06-13	Ralf Corsépius <ralf.corsepius@rtems.org>

	* include/rtems/tar.h, libcsupport/include/tar.h: Remove.
	* configure.ac: Require toolchain to provide tar.h.